# agent

./: .gitignore  CLAUDE.md  README.md
.superpowers/sdd/: task-1-brief.md  (+1 more)
docs/: annotation_guideline.md  dataset_specification.md  judge_constitution.md  改进方案.md  汇报顺序与差距分析.md  测试结果分析.md  研发计划与操作指导.md  课题汇报.md  阶段性汇报.md  项目模块构成.md
python_version/: .gitignore  Dockerfile  _comparison.txt  app.py  audit_output.txt  convert_to_docx.py  eval_report.json  eval_report_prompt_v2.json  gold_v1_eval_report.json  gold_v2_eval_report.json  main.py  pyproject.toml  requirements.txt  run.bat  run_all_eval.py  run_calibration.py  run_dspy_optimize.py  run_gold_eval.py  研发计划书.md
python_version/app/: __init__.py  adapters.py  agent.py  batch.py  calibration.py  calibration_agent.py  calibrator.py  chain.py  debias.py  dspy_eval.py  engine.py  experiment_tracking.py  flaw_matcher.py  metrics.py  model_registry.py  models.py  profiles.py  prompts.py  protocol.py  raw_store.py  recalc.py  reflection.py  reporter.py  routes.py  stability.py  storage.py  task_manager.py  tracing.py  verifier.py
python_version/data/: __init__.py  calibration_params.json  calibration_result.json  eval_dataset.json  eval_dataset_factual.json  eval_dataset_summeval.json  eval_dataset_v2.json  eval_history.jsonl  gold_dataset_v1.json  gold_dataset_v2.json  tasks.jsonl
python_version/scripts/: calibrate.py  convert_to_docx.py  gen_daily_report.py  gen_report.py
python_version/static/: index.html
python_version/tests/: test_day6_minimal.py  test_evaluate.py  test_evaluation_profiles.py  test_flaw_matcher.py
(+14 files in other folders)
